; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/extr_startup.c_Reset_Handler.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/extr_startup.c_Reset_Handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@_etext = common dso_local global i32 0, align 4
@_srelocate = common dso_local global i32 0, align 4
@_erelocate = common dso_local global i32 0, align 4
@_szero = common dso_local global i32 0, align 4
@_ezero = common dso_local global i32 0, align 4
@_sfixed = common dso_local global i32 0, align 4
@SCB_VTOR_TBLOFF_Msk = common dso_local global i32 0, align 4
@SCB = common dso_local global %struct.TYPE_2__* null, align 8
@BOOTLOADER_MAGIC = common dso_local global i32 0, align 4
@MAGIC_ADDR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Reset_Handler() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  store i32* @_etext, i32** %1, align 8
  store i32* @_srelocate, i32** %2, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = icmp ne i32* %3, %4
  br i1 %5, label %6, label %17

6:                                                ; preds = %0
  br label %7

7:                                                ; preds = %10, %6
  %8 = load i32*, i32** %2, align 8
  %9 = icmp ult i32* %8, @_erelocate
  br i1 %9, label %10, label %16

10:                                               ; preds = %7
  %11 = load i32*, i32** %1, align 8
  %12 = getelementptr inbounds i32, i32* %11, i32 1
  store i32* %12, i32** %1, align 8
  %13 = load i32, i32* %11, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = getelementptr inbounds i32, i32* %14, i32 1
  store i32* %15, i32** %2, align 8
  store i32 %13, i32* %14, align 4
  br label %7

16:                                               ; preds = %7
  br label %17

17:                                               ; preds = %16, %0
  store i32* @_szero, i32** %2, align 8
  br label %18

18:                                               ; preds = %21, %17
  %19 = load i32*, i32** %2, align 8
  %20 = icmp ult i32* %19, @_ezero
  br i1 %20, label %21, label %24

21:                                               ; preds = %18
  %22 = load i32*, i32** %2, align 8
  %23 = getelementptr inbounds i32, i32* %22, i32 1
  store i32* %23, i32** %2, align 8
  store i32 0, i32* %22, align 4
  br label %18

24:                                               ; preds = %18
  store i32* @_sfixed, i32** %1, align 8
  %25 = load i32*, i32** %1, align 8
  %26 = ptrtoint i32* %25 to i32
  %27 = load i32, i32* @SCB_VTOR_TBLOFF_Msk, align 4
  %28 = and i32 %26, %27
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SCB, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  %31 = call i32 (...) @__libc_init_array()
  %32 = call i32 (...) @main()
  br label %33

33:                                               ; preds = %24, %33
  br label %33
}

declare dso_local i32 @__libc_init_array(...) #1

declare dso_local i32 @main(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
